# yolo-test

./: 1ts.py  1ts_trt.py  2ts.py  3ts.py  PID.py  README.md  detect.realtime.py  logitech.test.py  ptzen.py  s.py  ts.py
gccuda/: ghostconv_extension.cpp  ghostconv_kernel.h  setup_ghostconv.py
gccuda/include/: ghostconv_kernel.h
gccuda/plugin/: CMakeLists.txt  GhostConvPlugin.cpp  GhostConvPlugin.h  GhostConvPluginCreator.cpp  build_plugin.bat  ghostconv_api.h  ghostconv_api_adapter.cpp  ghostconv_exports.h  ghostconv_kernel.h
gccuda/plugin/build-ninja/: CMakeCache.txt  build.ninja  cmake_install.cmake  ghostconv_trt.exp  ghostconv_trt.lib  test_ctypes_call.py
gccuda/src/: ghostconv.exp  ghostconv.lib  ghostconv1.exp  ghostconv1.lib  ghostconv2.exp  ghostconv2.lib  ghostconv3.exp  ghostconv3.lib  ghostconv_extension.cpp  ghostconv_kernel.h  ghostconv_kernel_fused.cu  ghostconv_kernel_nt.cu  ghostconvdnn.py  test_ghconv.exp  test_ghconv.lib  ts.py
